--- a/src/additional-stories/colors/index.stories.mdx
+++ b/src/additional-stories/colors/index.stories.mdx
@@ -2,7 +2,7 @@ import { Title, Description } from '@storybook/addon-docs/blocks'
 import { Meta, ColorPalette, ColorItem } from '@storybook/addon-docs/blocks';
 import theme from '../../config/theme'
 
-<Meta title='Colors' />
+<Meta title='Theme/Colors' />
 
 <Title>Colors</Title>
 <Description>A list of the available colors provided by the theme.</Description>
