--- a/src/components/button/index.stories.mdx
+++ b/src/components/button/index.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props } from '@storybook/addon-docs/blocks'
 
 import Button from './';
 
-<Meta title="Button" component={Button} />
+<Meta title='Button' component={Button} />
 
 # Button
 
