--- a/src/components/card/index.stories.mdx
+++ b/src/components/card/index.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props } from '@storybook/addon-docs/blocks'
 
 import Card from './';
 
-<Meta title="Card" component={Card} />
+<Meta title='Card' component={Card} />
 
 
 # Card
