--- a/src/components/checkbox/index.stories.mdx
+++ b/src/components/checkbox/index.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props } from '@storybook/addon-docs/blocks'
 
 import Checkbox from './';
 
-<Meta title="Checkbox" component={Checkbox} />
+<Meta title='Checkbox' component={Checkbox} />
 
 # Checkbox
 
