--- a/src/components/footer/index.stories.mdx
+++ b/src/components/footer/index.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props } from '@storybook/addon-docs/blocks'
 
 import Footer from './';
 
-<Meta title="Footer" component={Footer} />
+<Meta title='Footer' component={Footer} />
 
 # Footer
 
