--- a/src/components/icon-button/index.stories.mdx
+++ b/src/components/icon-button/index.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Props } from '@storybook/addon-docs/blocks'
 
 import IconButton from './';
 
-<Meta title="Icon Button" component={IconButton} />
+<Meta title='Icon Button' component={IconButton} />
 
 # IconButton
 
